syntax = "proto3";

package random;

service RandomService {
  rpc generateRandomString (RandomStringRequest) returns (RandomStringResponse) {}
}

message RandomStringRequest {
  int32 numChars = 1;
}

message RandomStringResponse {
  string result = 1;
}